gccida/c0/process_reg_param
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_reg_param/src/integrate.c:1054:28: error: use of undeclared identifier 'machine_mode'
temp = copy_to_mode_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)loc), copy); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_reg_param/src/integrate.c:1054:43: error: expected expression
temp = copy_to_mode_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)loc), copy); 
                                          ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_reg_param/src/obj/integrate.o] Error 1
